--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -714,8 +714,8 @@ services:
     container_name: pmm
     volumes:
       - "/mnt/appdata/pmm:/config"
-      - "/mnt/media/tv:/tvshows"
-      - "/mnt/media/movies:/movies"
+      # - "/mnt/media/tv:/tvshows"
+      # - "/mnt/media/movies:/movies"
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
