--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -380,12 +380,13 @@ services:
     volumes: 
       - "/mnt/appdata/sabnzbd/config/scripts:/app/sabnzbd/scripts"
       - "/mnt/appdata/sabnzbd/config:/config"
-      - "/mnt/media/downloads/incomplete-downloads:/data/incomplete-downloads"
-      - "/mnt/media/downloads/book-downloads:/data/book-downloads"
-      - "/mnt/media/downloads/comic-downloads:/data/comic-downloads"
-      - "/mnt/media/downloads/movie-downloads:/data/movie-downloads"
-      - "/mnt/media/downloads/tv-downloads:/data/tv-downloads"
-      - "/mnt/media/downloads/misc-downloads:/data/misc-downloads"
+      - "/mnt/media/downloads/:/data/"
+      # - "/mnt/media/downloads/incomplete-downloads:/data/incomplete-downloads"
+      # - "/mnt/media/downloads/book-downloads:/data/book-downloads"
+      # - "/mnt/media/downloads/comic-downloads:/data/comic-downloads"
+      # - "/mnt/media/downloads/movie-downloads:/data/movie-downloads"
+      # - "/mnt/media/downloads/tv-downloads:/data/tv-downloads"
+      # - "/mnt/media/downloads/misc-downloads:/data/misc-downloads"
       - /mnt/appdata/healthcheck:/config/crontabs
   sonarr: 
     container_name: sonarr
