--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -381,7 +381,7 @@ services:
     volumes: 
       - "/mnt/appdata/sabnzbd/config/scripts:/app/sabnzbd/scripts"
       - "/mnt/appdata/sabnzbd/config:/config"
-      - "/mnt/media/downloads/:/data/"
+      - "/mnt/media/:/data/"
       # - "/mnt/media/downloads/incomplete-downloads:/data/incomplete-downloads"
       # - "/mnt/media/downloads/book-downloads:/data/book-downloads"
       # - "/mnt/media/downloads/comic-downloads:/data/comic-downloads"
