fixed book downloads

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,10 +152,7 @@ services:
       - UMASK_SET=002
     volumes:
       - /mnt/appdata/readarr:/config
-      - /mnt/media/downloads/book-downloads:/data/book-downloads
-      - /mnt/media/books:/data/books
-    # links:
-    #   - sabnzbd
+      - /mnt/media:/data
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
@@ -183,9 +180,7 @@ services:
     #   - sabnzbd
     volumes:
       - /mnt/appdata/mylar3:/config
-      - /mnt/media/downloads/book-downloads:/data/downloads
-      - /mnt/media/comics:/data/comics
-      # - /mnt/media/manga:/data/manga
+      - /mnt/media:/data
     restart: unless-stopped
     networks: 
       - traefik_proxy
