--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -570,7 +570,7 @@ services:
      - traefik.frontend.headers.STSPreload=true
      - traefik.frontend.headers.frameDeny=false
   prowlarr:
-    image: linuxserver/prowlarr:latest
+    image: linuxserver/prowlarr:nightly
     # image: linuxserver/prowlarr:0.2.0-nightly
     container_name: prowlarr
     environment: 
