--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -278,7 +278,7 @@ services:
       - /mnt/media/movies:/data/movies
       - /mnt/appdata/healthcheck:/config/crontabs
     environment:
-      - DOCKER_MODS=lscr.io/linuxserver/mods:plex-absolute-hama|lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:plex-absolute-hama|linuxserver/mods:universal-cron
       - VERSION=public
       - PUID=${PUID}
       - PGID=${PGID}
@@ -313,7 +313,7 @@ services:
   radarr: 
     container_name: radarr
     environment: 
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
       - "TZ=${TZ}"
       - "PUID=${PUID}"
       - "PGID=${PGID}"
@@ -346,7 +346,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
     image: lscr.io/linuxserver/sabnzbd:latest
     labels: 
       - traefik.enable=true
@@ -409,7 +409,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
     image: lscr.io/linuxserver/tautulli:latest
     labels: 
       - traefik.enable=true
@@ -483,7 +483,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
     volumes:
       - "/mnt/appdata/duplicati:/config"
       - /mnt:/source
@@ -542,7 +542,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
     volumes:
      - "/mnt/appdata/monitorr:/app"
      - /mnt/appdata/healthcheck:/config/crontabs
@@ -569,7 +569,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
     volumes:
       - "/mnt/appdata/prowlarr:/config"
       - /mnt/appdata/healthcheck:/config/crontabs
@@ -597,7 +597,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
     volumes:
       - "/mnt/appdata/overseerr:/config"
       - /mnt/appdata/healthcheck:/config/crontabs
