testing new dashy port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -404,12 +404,13 @@ services:
       - TZ=America/Chicago
       - "PUID=${PUID}"
       - "PGID=${PGID}"
+      - "PORT=4000"
     image: lissy93/dashy:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=dashy
       - "traefik.frontend.rule=Host:dashy.${DOMAINNAME}"
-      - traefik.port=80
+      - traefik.port=4000
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
@@ -420,6 +421,10 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
+      # - "traefik.http.middlewares.testheader.headers.accesscontrolallowmethods=GET,OPTIONS,PUT"
+      # - "traefik.http.middlewares.testheader.headers.accesscontrolalloworiginlist=https://foo.bar.org,https://example.org"
+      # - "traefik.http.middlewares.testheader.headers.accesscontrolmaxage=100"
+      # - "traefik.http.middlewares.testheader.headers.addvaryheader=true"
     networks: 
       - traefik_proxy
     restart: always
