a few security options for dashy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -406,6 +406,16 @@ services:
       - "PGID=${PGID}"
       - "PORT=4000"
     image: lissy93/dashy:latest
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+      - DAC_OVERRIDE
+      - NET_BIND_SERVICE
+    security_opt:
+      - no-new-privileges:true
     labels: 
       - traefik.enable=true
       - traefik.backend=dashy
@@ -430,6 +440,12 @@ services:
     restart: always
     volumes: 
       - "/mnt/appdata/dashy/:/app/public/"
+    healthcheck:
+      test: ['CMD', 'node', '/app/services/healthcheck']
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
   tautulli: 
     container_name: tautulli
     depends_on: 
