--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -404,7 +404,9 @@ services:
     environment: 
       - TZ=America/Chicago
       - "PORT=4000"
-    image: lissy93/dashy:latest
+      - HOST=frost.haus
+      - NODE_ENV=production
+    image: ghcr.io/lissy93/dashy:latest
     # cap_drop:
     #   - ALL
     # cap_add:
