--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -718,9 +718,9 @@ services:
     user: ${PUID}:${PGID}
     environment: 
       - TZ=America/Chicago
-      - "PORT=4000"
+      - PORT=4000
       - NODE_ENV=production
-    image: ghcr.io/lissy93/dashy:latest
+    image: ghcr.io/lissy93/dashy:dashy
     # cap_drop:
     #   - ALL
     # cap_add:
