--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -716,20 +716,8 @@ services:
       - TZ=America/Chicago
       - PORT=4000
       - NODE_ENV=production
-    # networks: 
-    #   - traefik_proxy
     volumes: 
       - "/mnt/appdata/dashy/:/app/public/"
-    # cap_drop:
-    #   - ALL
-    # cap_add:
-    #   - CHOWN
-    #   - SETGID
-    #   - SETUID
-    #   - DAC_OVERRIDE
-    #   - NET_BIND_SERVICE
-    # security_opt:
-    #   - no-new-privileges:true
     labels: 
       - traefik.enable=true
       - traefik.backend=dashy
@@ -751,3 +739,15 @@ services:
     #   timeout: 10s
     #   retries: 3
     #   start_period: 40s
+    # cap_drop:
+    #   - ALL
+    # cap_add:
+    #   - CHOWN
+    #   - SETGID
+    #   - SETUID
+    #   - DAC_OVERRIDE
+    #   - NET_BIND_SERVICE
+    # security_opt:
+    #   - no-new-privileges:
+    # networks: 
+    #   - traefik_proxy
