--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -749,5 +749,5 @@ services:
     #   - NET_BIND_SERVICE
     # security_opt:
     #   - no-new-privileges:
-    # networks: 
-    #   - traefik_proxy
+    networks: 
+      - traefik_proxy
