--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -714,7 +714,7 @@ services:
     user: "${PUID}:${PGID}"
     environment: 
       - TZ=America/Chicago
-      # - PORT=4000
+      - PORT=4000
       - NODE_ENV=production
     volumes: 
       - "/mnt/appdata/dashy/:/app/public/"
@@ -722,7 +722,7 @@ services:
       - traefik.enable=true
       - traefik.backend=dashy
       - "traefik.frontend.rule=Host:dashy.${DOMAINNAME}"
-      - traefik.port=80
+      - traefik.port=4000
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
@@ -733,21 +733,21 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
-    # healthcheck:
-    #   test: ['CMD', 'node', '/app/services/healthcheck']
-    #   interval: 1m30s
-    #   timeout: 10s
-    #   retries: 3
-    #   start_period: 40s
-    # cap_drop:
-    #   - ALL
-    # cap_add:
-    #   - CHOWN
-    #   - SETGID
-    #   - SETUID
-    #   - DAC_OVERRIDE
-    #   - NET_BIND_SERVICE
-    # security_opt:
-    #   - no-new-privileges:
+    healthcheck:
+      test: ['CMD', 'node', '/app/services/healthcheck']
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+      - DAC_OVERRIDE
+      - NET_BIND_SERVICE
+    security_opt:
+      - no-new-privileges:
     networks: 
       - traefik_proxy
