--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -744,8 +744,8 @@ services:
     # cap_add:
     #   - CHOWN
     #   - SETGID
-      - SETUID
-      - DAC_OVERRIDE
-      - NET_BIND_SERVICE
+      # - SETUID
+      # - DAC_OVERRIDE
+      # - NET_BIND_SERVICE
     networks: 
       - traefik_proxy
