--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -714,7 +714,7 @@ services:
     user: "${PUID}:${PGID}"
     environment: 
       - TZ=America/Chicago
-      # - PORT=4000
+      - PORT=4000
       - NODE_ENV=production
     volumes: 
       - "/mnt/appdata/dashy/:/app/public/"
@@ -722,7 +722,7 @@ services:
       - traefik.enable=true
       - traefik.backend=dashy
       - "traefik.frontend.rule=Host:dashy.${DOMAINNAME}"
-      # - traefik.port=4000
+      - traefik.port=4000
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
