--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -714,7 +714,6 @@ services:
     user: "${PUID}:${PGID}"
     environment: 
       - TZ=America/Chicago
-      - PORT=4000
       - NODE_ENV=production
     volumes: 
       - "/mnt/appdata/dashy/:/app/public/"
@@ -722,7 +721,7 @@ services:
       - traefik.enable=true
       - traefik.backend=dashy
       - "traefik.frontend.rule=Host:dashy.${DOMAINNAME}"
-      - traefik.port=4000
+      - traefik.port=80
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
@@ -733,8 +732,8 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
-    networks: 
-      - traefik_proxy
+    # networks: 
+    #   - traefik_proxy
     # healthcheck:
     #   test: ['CMD', 'node', '/app/services/healthcheck']
     #   interval: 1m30s
