--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -645,6 +645,7 @@ services:
       - WATCHTOWER_NOTIFICATIONS=slack
       - "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${WATCHSLACK}"
       - WATCHTOWER_POLL_INTERVAL=1200
+      - WATCHTOWER_WARN_ON_HEAD_FAILURE=never
       - WATCHTOWER_CLEANUP=true
       - "PUID=${PUID}"
       - "PGID=${PGID}"
