--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -726,7 +726,7 @@ services:
       - DOCKER_MODS=linuxserver/mods:universal-cron
       # - SERVERURL=wireguard.frost.haus #optional
       - SERVERPORT=51820 #optional
-      - PEERS=10 #optional
+      - PEERS=laptop,phone,ahberyl,mberyl
       - PEERDNS=auto #optional
       - INTERNAL_SUBNET=10.13.13.0 #optional
       - ALLOWEDIPS=0.0.0.0/0 #optional
