--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -665,12 +665,8 @@ services:
       - TZ=America/Chicago
       - "LOG_LEVEL=info"
       - "LOG_JSON=false"
-      - "DIUN_WATCH_WORKERS=20"
-      - "DIUN_WATCH_SCHEDULE=0 */6 * * *"
-      - "DIUN_WATCH_JITTER=30s"
-      - "DIUN_PROVIDERS_DOCKER=true"
-    labels:
-      - "diun.enable=true"
+    # labels:
+    #   - "diun.enable=true"
     restart: always
   pmm:
     image: meisnate12/plex-meta-manager:latest
