--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -262,6 +262,7 @@ services:
       - /mnt/appdata/plex:/config
       - "/mnt/appdata/plex/Library/Application Support/Plex Media Server/Plug-ins/Trakttv.bundle:/usr/lib/plexmediaserver/Resources/Plug-ins-f05b712b6/Trakttv.bundle"
       - /mnt/media/tv:/data/tvshows
+      - /mnt/media/tvdvr:/data/tvdvr
       - /mnt/media/gphotos/photos:/data/photos
       - /mnt/media/movies:/data/movies
     environment:
